--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "cohensive/embed": "^5.5",
+        "components/font-awesome": "^5.9",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "laravelcollective/html": "^5.4.0"
     },
     "require-dev": {
         "composer/composer": "^1.9",
